# clipbin

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/skills/app-test/: SKILL.md
.github/workflows/: ci.yml  release.yml
devlog/: maccy-study-notes.md  macshot-study-notes.md  overnight-session.md  phase-a-scaffold.md  phase-d-backend-wiring.md  phase-e-frontend.md  phase-f-e2e.md  v0.2.0-features.md
docs/: PRODUCT_GUIDE.md
public/: screenshot-editor.html  settings.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  context_menu.rs  db.rs  lib.rs  main.rs  models.rs  paste.rs  screenshot.rs  settings.rs  tray.rs
src/components/: ClipCard.tsx  ClipList.tsx  Footer.tsx  PreviewDialog.tsx  SearchBar.tsx  SettingsDialog.tsx
src/lib/: utils.ts
src/stores/: clipStore.ts
tests/e2e/: app.spec.ts  screenshots.spec.ts
tests/frontend/: ClipCard.test.tsx  ClipList.test.tsx  SearchBar.test.tsx  clipStore.test.ts  setup.ts  utils.test.ts
